# battery

./: .gitignore  battery.cabal  run
simple-volume-monitor/: Makefile  main.c
src/: Battery.hs  Brightness.hs  FileTools.hs  Main.hs  SimpleVolumeDisplay.hs  Utils.hs
