name:                battery
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Schmitz
maintainer:          daniel.schmitz@gmx.info
copyright:           2017 Daniel Schmitz
category:            App
build-type:          Simple
cabal-version:       >=1.10

executable battery
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       glib,
                       gtk3 >= 0.14.7,
                       cairo >= 0.13.4.1,
                       pango >= 0.13.4.0
  default-language:    Haskell2010
